--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -109,7 +109,10 @@
   * {
     @apply border-border;
   }
+  html {
+    @apply h-full;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground h-full;
   }
 }
