--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -109,10 +109,7 @@
   * {
     @apply border-border;
   }
-  html {
-    @apply h-full;
-  }
   body {
-    @apply bg-background text-foreground h-full;
+    @apply bg-background text-foreground;
   }
 }
